--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     },
     "browserslist": {
         "production": [
-            ">0.2%",
+            "> 1%",
+            "last 2 versions",
+            "Firefox ESR",
             "not dead",
             "not op_mini all"
         ],
