--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@stripe/react-stripe-js": "^1.2.0",
+        "@stripe/stripe-js": "^1.11.0",
         "jwt-decode": "^3.1.2",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
