--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@material-ui/core": "^4.11.3",
         "@stripe/react-stripe-js": "^1.2.0",
         "@stripe/stripe-js": "^1.11.0",
         "jwt-decode": "^3.1.2",
