--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "dependencies": {
         "@material-ui/core": "^4.11.3",
+        "@material-ui/lab": "^4.0.0-alpha.57",
         "@stripe/react-stripe-js": "^1.2.0",
         "@stripe/stripe-js": "^1.11.0",
         "jwt-decode": "^3.1.2",
